Add selection dialog

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -122,4 +122,9 @@
         <item name="android:layout_marginRight">@dimen/m_dialog_button_margin</item>
     </style>
 
+    <style name="m_dialog_list_layout_material_style">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
 </resources>
