--- a/app/src/main/res/layout/dialog_material_selection.xml
+++ b/app/src/main/res/layout/dialog_material_selection.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/m_dialog_width"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingTop="@dimen/m_dialog_text_margin">
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -12,21 +12,20 @@
         <FrameLayout
             android:id="@+id/dialog_title_layout"
             style="@style/m_dialog_title_layout_material_style"
+            android:layout_marginTop="@dimen/m_dialog_text_margin"
             android:visibility="gone">
 
-            <TextView
+            <com.jp.materialdesignsample.view.material.MaterialTextView
                 android:id="@+id/dialog_title_text"
+                app:displayType="title"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:textSize="21sp"
-                android:textStyle="bold" />
+                android:textColor="@color/m_black_87" />
         </FrameLayout>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_gravity="bottom"
-            android:background="@android:color/darker_gray" />
+            style="@style/m_divider_material_style"
+            android:layout_gravity="bottom" />
     </FrameLayout>
 
     <FrameLayout
@@ -44,10 +43,8 @@
         android:layout_height="wrap_content">
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_gravity="top"
-            android:background="@android:color/darker_gray" />
+            style="@style/m_divider_material_style"
+            android:layout_gravity="top" />
 
         <LinearLayout
             android:id="@+id/dialog_button_layout"
