--- a/app/src/main/res/values/styles_list_view.xml
+++ b/app/src/main/res/values/styles_list_view.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <!-- List view -->
     <style name="m_list_single_line_layout_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/m_list_small_layout_height</item>
         <item name="android:paddingLeft">@dimen/m_list_vertical_padding</item>
         <item name="android:paddingRight">@dimen/m_list_vertical_padding</item>
     </style>
+
     <style name="m_list_single_line_text_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:gravity">start|center_vertical</item>
         <item name="android:paddingBottom">@dimen/m_list_single_line_text_bottom_padding</item>
         <item name="android:textColor">@color/m_black_87</item>
+    </style>
+
+    <!-- Spinner -->
+    <style name="m_spinner_layout_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">@dimen/m_spinner_layout_height</item>
+        <item name="android:paddingLeft">@dimen/m_spinner_vertical_padding</item>
+        <item name="android:paddingRight">@dimen/m_spinner_vertical_padding</item>
+    </style>
+
+    <style name="m_spinner_text_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">start|center_vertical</item>
+        <item name="android:textColor">@color/m_black_87</item>
+        <item name="android:textColorHint">@color/m_black_26</item>
     </style>
 </resources>
